Changed .collect(Collectors.toList()) to more recent .toList() since these lists are not modified further in the code (okay to be immutable)